--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,17 @@ services:
     image: postgres:15.3-alpine3.18
     restart: always
     env_file:
-      - .env
+      - ./backend/.env
     ports:
       - 5432:5432
+    volumes:
+      - db:/var/lib/postgresql/data
 
   adminer:
     image: adminer:4.8.1-standalone
     restart: always
     ports:
       - 8080:8080
+
+volumes:
+  db:
