--- a/backend/package.json
+++ b/backend/package.json
@@ -27,8 +27,10 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.15.0",
+    "cookie-parser": "^1.4.6",
     "joi": "^17.9.2",
     "lodash": "^4.17.21",
+    "ms": "^2.1.3",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
     "passport-jwt": "^4.0.1",
@@ -39,9 +41,11 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
     "@types/lodash": "^4.14.195",
+    "@types/ms": "^0.7.31",
     "@types/node": "18.16.12",
     "@types/passport-jwt": "^3.0.8",
     "@types/supertest": "^2.0.11",
