--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,9 +2,15 @@
 42_CLIENT_SECRET=
 42_CALLBACK_URL=
 
+POSTGRES_HOST=
 POSTGRES_PASSWORD=
 POSTGRES_USER=
 POSTGRES_DB=
 DATABASE_URL=
 
 JWT_SECRET=
+JWT_EXPIRES_IN=
+
+COOKIE_SECRET=
+
+APP_NAME=
