--- a/backend/package.json
+++ b/backend/package.json
@@ -27,13 +27,17 @@
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.3",
     "@prisma/client": "^4.16.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "joi": "^17.9.2",
     "lodash": "^4.17.21",
     "ms": "^2.1.3",
+    "otplib": "^12.0.1",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
     "passport-jwt": "^4.0.1",
+    "qrcode": "^1.5.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -48,6 +52,7 @@
     "@types/ms": "^0.7.31",
     "@types/node": "20.3.1",
     "@types/passport-jwt": "^3.0.8",
+    "@types/qrcode": "^1.5.0",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
