--- a/backend/package.json
+++ b/backend/package.json
@@ -20,12 +20,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.3",
+    "@nestjs/common": "^9.4.3",
     "@nestjs/config": "^3.0.0",
-    "@nestjs/core": "^10.0.3",
-    "@nestjs/jwt": "^10.1.0",
-    "@nestjs/passport": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.3",
+    "@nestjs/core": "^9.4.3",
+    "@nestjs/jwt": "^9.0.0",
+    "@nestjs/passport": "^9.0.3",
+    "@nestjs/platform-express": "^9.4.3",
     "@prisma/client": "^4.16.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -33,6 +33,7 @@
     "joi": "^17.9.2",
     "lodash": "^4.17.21",
     "ms": "^2.1.3",
+    "nestjs-prisma": "^0.20.1",
     "otplib": "^12.0.1",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
@@ -42,9 +43,9 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.3",
-    "@nestjs/schematics": "^10.0.1",
-    "@nestjs/testing": "^10.0.3",
+    "@nestjs/cli": "^9.5.0",
+    "@nestjs/schematics": "^9.2.0",
+    "@nestjs/testing": "^9.4.3",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/jest": "29.5.2",
