--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
     "passport-jwt": "^4.0.1",
+    "passport-oauth2": "^1.7.0",
     "qrcode": "^1.5.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
@@ -53,6 +54,7 @@
     "@types/ms": "^0.7.31",
     "@types/node": "20.3.1",
     "@types/passport-jwt": "^3.0.8",
+    "@types/passport-oauth2": "^1.4.12",
     "@types/qrcode": "^1.5.0",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
