--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "otplib": "^12.0.1",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-oauth2": "^1.7.0",
     "qrcode": "^1.5.3",
@@ -53,6 +54,7 @@
     "@types/lodash": "^4.14.195",
     "@types/ms": "^0.7.31",
     "@types/node": "20.3.1",
+    "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-oauth2": "^1.4.12",
     "@types/qrcode": "^1.5.0",
