--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,6 +2,10 @@
 42_CLIENT_SECRET=
 42_CALLBACK_URL=
 
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CALLBACK_URL=
+
 POSTGRES_HOST=
 POSTGRES_PASSWORD=
 POSTGRES_USER=
