--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.4.3",
+    "@nestjs/swagger": "^7.1.1",
     "@prisma/client": "^4.16.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
