--- a/backend/package.json
+++ b/backend/package.json
@@ -42,7 +42,8 @@
     "passport-oauth2": "^1.7.0",
     "qrcode": "^1.5.3",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "sharp": "^0.32.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.5.0",
@@ -52,6 +53,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "29.5.2",
     "@types/ms": "^0.7.31",
+    "@types/multer": "^1.4.7",
     "@types/node": "20.3.1",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-jwt": "^3.0.8",
