--- a/backend/package.json
+++ b/backend/package.json
@@ -47,6 +47,7 @@
     "passport-oauth2": "^1.7.0",
     "qrcode": "^1.5.3",
     "reflect-metadata": "^0.1.13",
+    "rimraf": "^5.0.1",
     "rxjs": "^7.8.1",
     "sharp": "^0.32.3",
     "socket.io": "^4.7.1",
