--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cyriacbr/react-split-text": "^1.0.0",
     "@iconify/react": "^4.1.1",
     "framer-motion": "^10.16.4",
     "next": "latest",
