--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@cyriacbr/react-split-text": "^1.0.0",
     "@iconify/react": "^4.1.1",
+    "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
     "next": "latest",
     "react": "latest",
