--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@cyriacbr/react-split-text": "^1.0.0",
     "@iconify/react": "^4.1.1",
+    "@uidotdev/usehooks": "^2.4.0",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
     "next": "latest",
@@ -22,6 +23,7 @@
     "eslint": "latest",
     "eslint-config-next": "latest",
     "postcss": "latest",
+    "prettier-plugin-tailwindcss": "^0.5.5",
     "tailwindcss": "latest"
   }
 }
