--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "react": "latest",
     "react-dom": "latest",
     "react-responsive": "^9.0.2",
-    "react-use": "^17.4.0"
+    "react-use": "^17.4.0",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
     "autoprefixer": "latest",
