--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,9 @@
 FROM node:18-alpine3.18
 WORKDIR /app
-RUN npm install -g @nestjs/cli
 COPY package*.json ./
-RUN npm install
+RUN npm install -g @nestjs/cli && npm install
 COPY src src/
 COPY prisma prisma/
 COPY *.json *.js .prettierrc ./
-EXPOSE 3000
-VOLUME [ "/var/www/avatars" ]
-CMD npx prisma migrate deploy && npx prisma generate && nest build && node dist/src/main.js
+RUN npx prisma generate && nest build
+CMD node dist/src/main.js
