--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@iconify/react": "^4.1.1",
     "@uidotdev/usehooks": "^2.4.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
     "lodash": "^4.17.21",
     "next": "latest",
@@ -22,6 +23,7 @@
     "split-type": "^0.3.3"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
     "autoprefixer": "latest",
     "eslint": "latest",
     "eslint-config-next": "latest",
