--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "react-dom": "latest",
     "sass": "^1.69.3",
     "sharp": "^0.32.6",
-    "split-type": "^0.3.3"
+    "split-type": "^0.3.3",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "autoprefixer": "latest",
