--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-dom": "latest",
     "sass": "^1.69.3",
     "sharp": "^0.32.6",
+    "socket.io-client": "^4.7.2",
     "split-type": "^0.3.3",
     "swr": "^2.2.4"
   },
