--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "sass": "^1.69.3",
     "sharp": "^0.32.6",
     "split-type": "^0.3.3",
+    "swiper": "^11.0.5",
     "swr": "^2.2.4"
   },
   "devDependencies": {
