--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "swiper": "^11.0.5",
     "swr": "^2.2.4",
     "utf-8-validate": "^5.0.10",
+    "uuid": "^9.0.1",
     "ws": "^8.14.2"
   },
   "devDependencies": {
