--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@iconify/react": "^4.1.1",
     "@uidotdev/usehooks": "^2.4.0",
+    "axios": "^1.6.2",
     "bufferutil": "^4.0.8",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
