--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.9",
+    "http-status-codes": "^2.3.0",
     "joi": "^17.11.0",
     "lodash": "^4.17.21",
     "ms": "^2.1.3",
